# forecast_lookecom

./: .gitignore  main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.jsx
notebooks/: step1_data_acquisition.ipynb  step2_modeling.ipynb
src/app/: __init__.py  logic.py  main.py
tests/: test_api.py  test_logic.py
